# sops-zed

./: .sops.yaml  Cargo.toml  README.md  dev-key.txt  extension.toml  extension.wasm  package-lock.json  package.json  sops.test.yaml  test.sops.yaml  tsconfig.json  zed-extension.json
src/: context-server.ts  extension.ts  lib.rs  sops.rs
