[package]
name = "sops"
version = "0.0.5"
edition = "2021"
authors = ["Josh Simmonds <github@beholdthehurricane.com.com>"]
description = "Zed extension for working with SOPS-encrypted files"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "sops_context_server"
path = "src/bin/sops_context_server.rs"

[dependencies]
zed_extension_api = "0.4.0"        # latest Zed Rust API crate  [oai_citation:0‡Docs.rs](https://docs.rs/zed_extension_api/0.4.0/zed_extension_api/)
which               = "4.4.0"
anyhow              = "1.0"
log                 = "0.4"
serde               = { version = "1.0", features = ["derive"] }
notify              = "5.0"       # for file‐watching in the binary
