[package]
name = "sops"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Josh Simmonds <github@beholdthehurricane.com>"]
description = "Zed extension for working with SOPS-encrypted files"

[lib]
crate-type = ["cdylib"]
path       = "src/sops.rs"

[dependencies]
libc = "0.2.171"
once_cell = "1.21.3"
zed_extension_api  = "0.5.0"

[profile.release]
lto = true
strip = true    # Automatically strip symbols from the binary
opt-level = 'z' # Optimize for size
panic = 'abort' # Remove stack unwinding code for panics
